; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/src/extr_gc.c_incremental_gc.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/src/extr_gc.c_incremental_gc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, %struct.TYPE_9__*, i64)* @incremental_gc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @incremental_gc(i32* %0, %struct.TYPE_9__* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_9__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_9__* %1, %struct.TYPE_9__** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  switch i32 %11, label %49 [
    i32 129, label %12
    i32 130, label %20
    i32 128, label %37
  ]

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  %14 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %15 = call i32 @root_scan_phase(i32* %13, %struct.TYPE_9__* %14)
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 0
  store i32 130, i32* %17, align 4
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %19 = call i32 @flip_white_part(%struct.TYPE_9__* %18)
  store i64 0, i64* %4, align 8
  br label %51

20:                                               ; preds = %3
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %20
  %26 = load i32*, i32** %5, align 8
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %28 = load i64, i64* %7, align 8
  %29 = call i64 @incremental_marking_phase(i32* %26, %struct.TYPE_9__* %27, i64 %28)
  store i64 %29, i64* %4, align 8
  br label %51

30:                                               ; preds = %20
  %31 = load i32*, i32** %5, align 8
  %32 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %33 = call i32 @final_marking_phase(i32* %31, %struct.TYPE_9__* %32)
  %34 = load i32*, i32** %5, align 8
  %35 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %36 = call i32 @prepare_incremental_sweep(i32* %34, %struct.TYPE_9__* %35)
  store i64 0, i64* %4, align 8
  br label %51

37:                                               ; preds = %3
  store i64 0, i64* %8, align 8
  %38 = load i32*, i32** %5, align 8
  %39 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %40 = load i64, i64* %7, align 8
  %41 = call i64 @incremental_sweep_phase(i32* %38, %struct.TYPE_9__* %39, i64 %40)
  store i64 %41, i64* %8, align 8
  %42 = load i64, i64* %8, align 8
  %43 = icmp eq i64 %42, 0
  br i1 %43, label %44, label %47

44:                                               ; preds = %37
  %45 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %46 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %45, i32 0, i32 0
  store i32 129, i32* %46, align 4
  br label %47

47:                                               ; preds = %44, %37
  %48 = load i64, i64* %8, align 8
  store i64 %48, i64* %4, align 8
  br label %51

49:                                               ; preds = %3
  %50 = call i32 @mrb_assert(i32 0)
  store i64 0, i64* %4, align 8
  br label %51

51:                                               ; preds = %49, %47, %30, %25, %12
  %52 = load i64, i64* %4, align 8
  ret i64 %52
}

declare dso_local i32 @root_scan_phase(i32*, %struct.TYPE_9__*) #1

declare dso_local i32 @flip_white_part(%struct.TYPE_9__*) #1

declare dso_local i64 @incremental_marking_phase(i32*, %struct.TYPE_9__*, i64) #1

declare dso_local i32 @final_marking_phase(i32*, %struct.TYPE_9__*) #1

declare dso_local i32 @prepare_incremental_sweep(i32*, %struct.TYPE_9__*) #1

declare dso_local i64 @incremental_sweep_phase(i32*, %struct.TYPE_9__*, i64) #1

declare dso_local i32 @mrb_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
